Update 1 on the markdown
Markdown update 1

--- a/Computational Molecule design - Basics I.ipynb
+++ b/Computational Molecule design - Basics I.ipynb
@@ -412,7 +412,7 @@
    "id": "bcbef5a8",
    "metadata": {},
    "source": [
-    "New task - Now i will create the Lysine molecule using SMILES  and plot it.\n",
+    "Remember that computational design doesnt mean the molecule would be stable in real world, Now New task deisgn a real world organic molecule - Now i will create the Lysine molecule using SMILES, also and plot it.\n",
     "Lysine a NH2 group one end and COOH group on the other end. Additionaly, another NH2 group is located next to the COOH containing \n",
     "carbon atom. The NH2 groups are added very simply, using the \"N\" notation while -COOH group is noted as \"C(=O)O\""
    ]
